--- a/style.css
+++ b/style.css
@@ -1060,3 +1060,12 @@ footer {
     align-items: center;
   }
 }
+
+/* CONTACTO – MAPA */
+.mapa-contacto {
+  height: 400px;
+  width: 100%;
+  margin: 30px 0;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px #0001;
+}
