--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   --naranja: #ff7f00;
   --gris: #444;
   --gris-claro: #f7f7f7;
-  --blanco: #fff;
+  --blanco: #e0f7fa;
 }
 
 /* ======================= */
